--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <title>Aditii</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Fjalla+One" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
    <header>
        <div class="wrap-top">
            <div class="logo">
-               Aditii
+               <a href="#" >Aditii</a>
            </div>
            <div class="search">
                <input type="text" class="inp-search">
+               <i class="fa fa-search" aria-hidden="true"></i>
            </div>
            <div class="cart">
-               <img src="img/Shape%202.png" alt="" class="cart-img">
+               <img src="img/cart.png" alt="" class="cart-img"> <i>$300</i>
            </div>
        </div>
        <div class="nav-wrap">
